--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/**
+-/**
 * Template Name: Personal - v2.1.0
 * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
 * Author: BootstrapMade.com
@@ -25,7 +25,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../img/bmg.png") top right no-repeat;
+  background: #040404 url("../img/mesh-27.png") top right no-repeat;
   background-size: cover;
   left: 0;
   right: 0;
