--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,7 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width: 768px) {
 
   header{
-    background-image: url("../img/mbg.png");
+    background-image: url("../img/pfmob.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: auto;
