--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../img/mesh-27.png") top right no-repeat;
+  background: #040404 url("../img/bmg.png") top right no-repeat;
   background-size: cover;
   left: 0;
   right: 0;
