--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,7 +149,8 @@ h1, h2, h3, h4, h5, h6 {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    justify-content: left;
+   height: 100%;
+   justify-content: left;
   }
   #header h1 {
     font-size: 36px;
